# CRepocOtus

./: .gitignore  CMakeLists.txt  README.md  Компоненты системы.md  Описание команд.md  Проблемы.md  Устойчивость к изменению требований.md  Функциональная схема.md
proto/: authorization.proto  client_router.proto  router_serverGame.proto
src/: BootStrapHendler.h  CMakeLists.txt  CollectionCommand.h  Command.h  CommandCollection.h  CommandException.h  EventLoop.h  ExceptionHendler.h  Fuel.h  HandlerFactory.h  ICommand.h  ICommandStatesQueueProcessing.h  IoC.cpp  IoC.h  PropertyUnit.h  QueueCommand.h  SolutionEq.cpp  SolutionEq.h  StatesQueueProcessing.cpp  StatesQueueProcessing.h  StoreDict.h  UObject.h  main.cpp  main.h  queueProcessing.h
src/Base/jsoncpp/: CMakeLists.txt  jsoncpp.cpp  jsonutils.h  utils.cpp  utils.h
src/Command/: BridgeCommand.h  ClassFunctionInitCommonCommand.h  CommandAddToMap.h  CommandCollection.h  CommandCommonMove.h  CommandEmpty.h  CommandErrorDefault.h  CommandInterpretCommand.h  CommandRepeat.h  GameCommand.h  GameCommandPlayRepeat.h  GameInitCommand.h  IBridgeCommand.h  ICommand.h  InitCommonCommand.cpp  InitCommonCommand.h  MoveCommand.h  ParseJSonCommand.h  QueueCommand.h  RotateCommand.h  SimpleMacroCommand.h  StartProcessingCommandCollection.h
src/Command/InterpretCommand/: Interpret_StartMove.h
src/Common/: BaseTypeJson.h  IPlugin.h  QueueCommand.h  SpaceShip.h  ThreadDeque.h  UObject.h
src/Common/objectAble/: IMovable.h  IShotable.h
src/CommonLib/: CMakeLists.txt  CommandException.cpp  CommandException.h  IMessagable.h  IMessagableStartGame.h  IPlugin.h  IPluginExport.h  IThreadDeque.h
src/CommonLib/objectAble/: IMovable.h  IRotable.h
src/EndPoint/: EndPoint.h  EndPointTourneyS.h  IEndPoint.h  IMessagable.h  InterpretCommand.h  Message.h  MessageAdapter.h
src/Exception/: InterpretCommandException.h  IoCException.h  MessageTourneySException.h  ScopesException.h  SpaceBattleException.h  UobjectException.h
src/IoC/: CMakeLists.txt  IoC.cpp  IoC.h  IoCGlobal.cpp  IoCGlobal.h  IoCNew.h
src/IoC/Scopes/: DependencyResolve.cpp  DependencyResolve.h  IDependencyResolve.h  IdScope.cpp  IdScope.h  Scope.h
src/IoC/Scopes/CommandsScope/: RegisterDependencyCommand.h
src/RegisterCommand/: RegisterMove.h
src/Scopes/: IDependencyResolve.h  Scope.h
src/inputPlugins/: CMakeLists.txt
src/inputPlugins/CommandInterpretMoveStopRotateShot/: ClassFunctionInitCommandInterpret.h  CommandInterpretCommand.h  CommandInterpretCommand_PrepareForMove.h  CommandInterpretCommand_PrepareForRotate.h  CommandInterpretCommand_PrepareForShot.h  CommandInterpretCommand_PrepareForStopMove.h  CommandInterpretCommand_Rotate.h  CommandInterpretCommand_Shot.h  CommandInterpretCommand_StartMove.h  CommandInterpretCommand_StopMove.h  InitCommandInterpretCommand.cpp  InitCommandInterpretCommand.h
src/inputPlugins/MoveCommandPlugin/: CMakeLists.txt  ClassFunctionMove.h  CommandMove.h  CommandMoveLongOperation.h  CommandMovement.h  IMovableLocationSetClass.h  MovableAdapter.h  MoveCommandPlugin.cpp  MoveCommandPlugin.h  TestMoveCommandPlugin.cpp  utest.cpp
src/inputPlugins/RotateCommandPlugin/: CMakeLists.txt  ClassFunctionRotate.h  CommandRotate.h  IRotableSetDirectionClass.h  RotableAdapter.h  RotateCommandPlugin.cpp  RotateCommandPlugin.h
src/inputPlugins/ShotCommandPlugin/: CMakeLists.txt  ClassFunctionShot.h  CommandShot.h  IShotableSetNumberShotClass.h  IShotableSetShotActClass.h  ShotAdapter.h  ShotCommandPlugin.cpp  ShotCommandPlugin.h
src/inputPlugins/TestMoveCommandPlugin/: CMakeLists.txt
src/mainServer/: MainServerCorePluginBattleCommand.cpp  MainServerCorePluginBattleCommand.h  exampleArgsMessageCommand.json  router_serverGame.grpc.pb.cc  router_serverGame.grpc.pb.h  router_serverGame.pb.cc  router_serverGame.pb.h
src/scopes/: DependencyResolve.cpp  DependencyResolve.h  IDependencyResolve.h  IdScope.h  InitCommand.h  ScopesProcessing.h
src/scopes/CommandsScope/: RegisterDependencyCommand.h  SetCurrentScopeCommand.h
src/service/: BootStrapHendler.h  ExceptionHendler.h  HandlerFactory.h  ILogger.h  IdGameAndThread.h  InitGameClassCommon.h  InitObjectGame.cpp  InitObjectGame.h  LoggerSimple.h  Message.h  StorageIdScope.cpp  StorageIdScope.h  StoreDict.h  initGameObject.json
src/service/TourneyService/: CorePluginBattleCommand.cpp  CorePluginBattleCommand.h  EventLoop.cpp  EventLoop.h  ICorePluginBattleCommand.h  IoCGlobal.h  MessageAdapterStartGame.h  SpaceBattle.cpp  SpaceBattle.h  TourneyService.cpp  TourneyService.h
src/tests/: CMakeLists.txt  TestSpaceBattle.cpp  utest.cpp
src/tests/TestCommon/: CMakeLists.txt  TestCollectionCommanrMultithread.cpp  TestCorePluginBattleCommand.cpp  TestInitObjectGame.cpp  TestIoCCommand.cpp  TestIoCScopes.cpp  TestMain.cpp  TestMainServerCorePluginBattleCommand.cpp  utest.cpp
src/tests/TestMoveCommandPlugin/: CMakeLists.txt  TestMoveCommandPlugin.cpp  utest.cpp
srcAuthorization/: AuthorizationClass.cpp  main.cpp  (+8 more)
srcClient2/: CMakeLists.txt  ClientPaintClass.cpp  ClientPaintClass.h  GuiClient.cpp  GuiClient.h  LoggerVisitor.h  main.cpp
srcClient2/CustomLog/: CustomLog.cpp  CustomLog.h  MessageType.h
srcClient2/FieldGame/: FieldGame.cpp  FieldGame.h
srcClient2/Logger/: CMakeLists.txt  logger.cpp  logger.h  logger_global.h
srcClient2/protoFile/: client_router.grpc.pb.cc
srcRouter/: CMakeLists.txt  RouterAuthorizationClient.h  RouterServer.h  RouterSpaceGameClass.h  RouterSpaceGameClient.cpp  RouterSpaceGameClient.h  RouterSpaceGameServerClient.h  main.cpp
srcRouter/authorization/: RouterAuthorizationClient.cpp  RouterAuthorizationClient.h  authorization.grpc.pb.h
srcRouter/routerMain/: IRouterMainClass.h  RouterMainClass.cpp  RouterMainClass.h  RouterServer.cpp  RouterServer.h  client_router.grpc.pb.h  client_router.pb.cc  client_router.pb.h
srcRouter/serverGame/: RouterSpaceGameServerClient.cpp  RouterSpaceGameServerClient.h  authorization.proto  router_serverGame.grpc.pb.cc  router_serverGame.pb.cc  router_serverGame.pb.h
srcRouter/tests/: TestMain.cpp
test/: CMakeLists.txt
(+11 files in other folders)
